--- a/_config.yml
+++ b/_config.yml
@@ -98,4 +98,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:132504j/132504j.github.io.git
+  branch: master
